--- a/vs2010/vs2010.vcxproj
+++ b/vs2010/vs2010.vcxproj
@@ -19,6 +19,7 @@
     <ClCompile Include="..\..\simple-cpp\inc\simple\_third_url_parser.c" />
     <ClCompile Include="..\inc\simple\dll.cpp" />
     <ClCompile Include="..\inc\simple\exec.cpp" />
+    <ClCompile Include="..\inc\simple\se.cpp" />
     <ClCompile Include="..\inc\simple\_third_memory_module.c" />
     <ClCompile Include="..\tests\main.cpp" />
     <ClCompile Include="test_cases.cpp" />
@@ -27,6 +28,7 @@
     <ClInclude Include="..\..\simple-cpp\inc\simple\string.h" />
     <ClInclude Include="..\inc\simple\dll.h" />
     <ClInclude Include="..\inc\simple\exec.h" />
+    <ClInclude Include="..\inc\simple\se.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{4134EC0F-BC22-481B-9AD1-27265FC542FC}</ProjectGuid>
