--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "inc/simple/_third/MemoryModule"]
 	path = inc/simple/_third/MemoryModule
 	url = https://github.com/fancycode/MemoryModule
+[submodule "inc/simple/_third/CDispatchPtr"]
+	path = inc/simple/_third/CDispatchPtr
+	url = https://github.com/mmorearty/DispatchPtr
