--- a/vs2010/vs2010.vcxproj
+++ b/vs2010/vs2010.vcxproj
@@ -26,7 +26,11 @@
     <ClCompile Include="..\inc\simple\dynamic_x_buffer.cpp" />
     <ClCompile Include="..\inc\simple\dynamic_x_json.cpp" />
     <ClCompile Include="..\inc\simple\exec.cpp" />
+    <ClCompile Include="..\inc\simple\ie_download.cpp" />
+    <ClCompile Include="..\inc\simple\ie_protocol.cpp" />
     <ClCompile Include="..\inc\simple\se.cpp" />
+    <ClCompile Include="..\inc\simple\wdf.cpp" />
+    <ClCompile Include="..\inc\simple\wdf_fs.cpp" />
     <ClCompile Include="..\inc\simple\_third_memory_module.c" />
     <ClCompile Include="..\tests\main.cpp" />
     <ClCompile Include="test_cases.cpp" />
@@ -39,7 +43,11 @@
     <ClInclude Include="..\inc\simple\dll.h" />
     <ClInclude Include="..\inc\simple\dynamic.h" />
     <ClInclude Include="..\inc\simple\exec.h" />
+    <ClInclude Include="..\inc\simple\ie_download.h" />
+    <ClInclude Include="..\inc\simple\ie_protocol.h" />
     <ClInclude Include="..\inc\simple\se.h" />
+    <ClInclude Include="..\inc\simple\wdf.h" />
+    <ClInclude Include="..\inc\simple\wdf_fs.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{4134EC0F-BC22-481B-9AD1-27265FC542FC}</ProjectGuid>
@@ -88,7 +96,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>comsupp.lib;comsuppw.lib;Dbghelp.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>comsupp.lib;comsuppw.lib;Dbghelp.lib;wininet.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PreBuildEvent>
       <Command>@if not exist test_cases.cpp  @echo  // test_cases    &gt;    test_cases.cpp
@@ -116,7 +124,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>comsupp.lib;comsuppw.lib;Dbghelp.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>comsupp.lib;comsuppw.lib;Dbghelp.lib;wininet.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PreBuildEvent>
       <Command>@if not exist test_cases.cpp  @echo  // test_cases    &gt;    test_cases.cpp
