--- a/vs2010/vs2010.vcxproj.filters
+++ b/vs2010/vs2010.vcxproj.filters
@@ -112,5 +112,8 @@
     <ClInclude Include="..\inc\simple\ie_protocol.h">
       <Filter>simple-cpp-win32</Filter>
     </ClInclude>
+    <ClInclude Include="..\inc\simple\ie.h">
+      <Filter>simple-cpp-win32</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
