--- a/vs2010/vs2010.vcxproj.filters
+++ b/vs2010/vs2010.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="..\inc\simple\ie.cpp">
       <Filter>simple-cpp-win32</Filter>
     </ClCompile>
+    <ClCompile Include="..\inc\simple\wdf_protocol.cpp">
+      <Filter>simple-cpp-win32</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="simple-cpp-win32">
@@ -116,6 +119,9 @@
       <Filter>simple-cpp-win32</Filter>
     </ClInclude>
     <ClInclude Include="..\inc\simple\ie.h">
+      <Filter>simple-cpp-win32</Filter>
+    </ClInclude>
+    <ClInclude Include="..\inc\simple\wdf_protocol.h">
       <Filter>simple-cpp-win32</Filter>
     </ClInclude>
   </ItemGroup>
