--- a/vs2010/vs2010.vcxproj.filters
+++ b/vs2010/vs2010.vcxproj.filters
@@ -39,12 +39,6 @@
     <ClCompile Include="..\..\simple-cpp\inc\simple\buffer.cpp">
       <Filter>simple-cpp</Filter>
     </ClCompile>
-    <ClCompile Include="..\inc\simple\dynamic_x_buffer.cpp">
-      <Filter>simple-cpp-win32</Filter>
-    </ClCompile>
-    <ClCompile Include="..\inc\simple\dynamic_x_json.cpp">
-      <Filter>simple-cpp-win32</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\simple-cpp\inc\simple\_third_jread.c">
       <Filter>simple-cpp</Filter>
     </ClCompile>
@@ -70,6 +64,15 @@
       <Filter>simple-cpp-win32</Filter>
     </ClCompile>
     <ClCompile Include="..\inc\simple\wdf_protocol.cpp">
+      <Filter>simple-cpp-win32</Filter>
+    </ClCompile>
+    <ClCompile Include="..\inc\simple\dynamic_buffer.cpp">
+      <Filter>simple-cpp-win32</Filter>
+    </ClCompile>
+    <ClCompile Include="..\inc\simple\dynamic_json.cpp">
+      <Filter>simple-cpp-win32</Filter>
+    </ClCompile>
+    <ClCompile Include="..\inc\simple\msg_thread.cpp">
       <Filter>simple-cpp-win32</Filter>
     </ClCompile>
   </ItemGroup>
@@ -122,6 +125,12 @@
       <Filter>simple-cpp-win32</Filter>
     </ClInclude>
     <ClInclude Include="..\inc\simple\wdf_protocol.h">
+      <Filter>simple-cpp-win32</Filter>
+    </ClInclude>
+    <ClInclude Include="..\inc\simple\msg_handler.h">
+      <Filter>simple-cpp-win32</Filter>
+    </ClInclude>
+    <ClInclude Include="..\inc\simple\msg_thread.h">
       <Filter>simple-cpp-win32</Filter>
     </ClInclude>
   </ItemGroup>
