--- a/vs2010/vs2010.vcxproj.filters
+++ b/vs2010/vs2010.vcxproj.filters
@@ -84,6 +84,9 @@
     <ClCompile Include="..\inc\simple\res.cpp">
       <Filter>simple-cpp-win32</Filter>
     </ClCompile>
+    <ClCompile Include="..\inc\simple\patcher.cpp">
+      <Filter>simple-cpp-win32</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="simple-cpp-win32">
@@ -149,6 +152,9 @@
       <Filter>simple-cpp-win32</Filter>
     </ClInclude>
     <ClInclude Include="..\inc\simple\res.h">
+      <Filter>simple-cpp-win32</Filter>
+    </ClInclude>
+    <ClInclude Include="..\inc\simple\patcher.h">
       <Filter>simple-cpp-win32</Filter>
     </ClInclude>
   </ItemGroup>
