--- a/vs2010/vs2010.vcxproj
+++ b/vs2010/vs2010.vcxproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <ClInclude Include="..\..\simple-cpp\inc\simple\buffer.h" />
     <ClInclude Include="..\..\simple-cpp\inc\simple\string.h" />
+    <ClInclude Include="..\inc\simple\anti.h" />
     <ClInclude Include="..\inc\simple\dispatch_impl.h" />
     <ClInclude Include="..\inc\simple\dispatch_ptr.h" />
     <ClInclude Include="..\inc\simple\dll.h" />
