--- a/vs2010/vs2010.vcxproj
+++ b/vs2010/vs2010.vcxproj
@@ -27,6 +27,7 @@
     <ClCompile Include="..\inc\simple\dynamic_json.cpp" />
     <ClCompile Include="..\inc\simple\exec.cpp" />
     <ClCompile Include="..\inc\simple\fiber.cpp" />
+    <ClCompile Include="..\inc\simple\fs.cpp" />
     <ClCompile Include="..\inc\simple\ie.cpp" />
     <ClCompile Include="..\inc\simple\ie_download.cpp" />
     <ClCompile Include="..\inc\simple\ie_protocol.cpp" />
@@ -52,6 +53,7 @@
     <ClInclude Include="..\inc\simple\dynamic.h" />
     <ClInclude Include="..\inc\simple\exec.h" />
     <ClInclude Include="..\inc\simple\fiber.h" />
+    <ClInclude Include="..\inc\simple\fs.h" />
     <ClInclude Include="..\inc\simple\ie.h" />
     <ClInclude Include="..\inc\simple\ie_download.h" />
     <ClInclude Include="..\inc\simple\ie_protocol.h" />
