--- a/vs2010/vs2010.vcxproj
+++ b/vs2010/vs2010.vcxproj
@@ -21,54 +21,54 @@
     <ClCompile Include="..\..\simple-cpp\inc\simple\_third_jwrite.c" />
     <ClCompile Include="..\..\simple-cpp\inc\simple\_third_pwgen.c" />
     <ClCompile Include="..\..\simple-cpp\inc\simple\_third_url_parser.c" />
-    <ClCompile Include="..\inc\simple\dll.cpp" />
-    <ClCompile Include="..\inc\simple\dynamic.cpp" />
-    <ClCompile Include="..\inc\simple\dynamic_buffer.cpp" />
-    <ClCompile Include="..\inc\simple\dynamic_json.cpp" />
-    <ClCompile Include="..\inc\simple\exec.cpp" />
-    <ClCompile Include="..\inc\simple\fiber.cpp" />
-    <ClCompile Include="..\inc\simple\fs.cpp" />
-    <ClCompile Include="..\inc\simple\ie.cpp" />
-    <ClCompile Include="..\inc\simple\ie_download.cpp" />
-    <ClCompile Include="..\inc\simple\ie_protocol.cpp" />
-    <ClCompile Include="..\inc\simple\msg_thread.cpp" />
-    <ClCompile Include="..\inc\simple\namedpipe.cpp" />
-    <ClCompile Include="..\inc\simple\patcher.cpp" />
-    <ClCompile Include="..\inc\simple\res.cpp" />
-    <ClCompile Include="..\inc\simple\se.cpp" />
-    <ClCompile Include="..\inc\simple\wdf.cpp" />
-    <ClCompile Include="..\inc\simple\wdf_fs.cpp" />
-    <ClCompile Include="..\inc\simple\wdf_protocol.cpp" />
-    <ClCompile Include="..\inc\simple\_third_memory_module.c" />
+    <ClCompile Include="..\inc\simple-win32\dll.cpp" />
+    <ClCompile Include="..\inc\simple-win32\dynamic.cpp" />
+    <ClCompile Include="..\inc\simple-win32\dynamic_buffer.cpp" />
+    <ClCompile Include="..\inc\simple-win32\dynamic_json.cpp" />
+    <ClCompile Include="..\inc\simple-win32\exec.cpp" />
+    <ClCompile Include="..\inc\simple-win32\fiber.cpp" />
+    <ClCompile Include="..\inc\simple-win32\fs.cpp" />
+    <ClCompile Include="..\inc\simple-win32\ie.cpp" />
+    <ClCompile Include="..\inc\simple-win32\ie_download.cpp" />
+    <ClCompile Include="..\inc\simple-win32\ie_protocol.cpp" />
+    <ClCompile Include="..\inc\simple-win32\msg_thread.cpp" />
+    <ClCompile Include="..\inc\simple-win32\namedpipe.cpp" />
+    <ClCompile Include="..\inc\simple-win32\patcher.cpp" />
+    <ClCompile Include="..\inc\simple-win32\res.cpp" />
+    <ClCompile Include="..\inc\simple-win32\se.cpp" />
+    <ClCompile Include="..\inc\simple-win32\wdf.cpp" />
+    <ClCompile Include="..\inc\simple-win32\wdf_fs.cpp" />
+    <ClCompile Include="..\inc\simple-win32\wdf_protocol.cpp" />
+    <ClCompile Include="..\inc\simple-win32\_third_memory_module.c" />
     <ClCompile Include="..\tests\main.cpp" />
     <ClCompile Include="test_cases.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\simple-cpp\inc\simple\buffer.h" />
     <ClInclude Include="..\..\simple-cpp\inc\simple\string.h" />
-    <ClInclude Include="..\inc\simple\anti.h" />
-    <ClInclude Include="..\inc\simple\dispatch_impl.h" />
-    <ClInclude Include="..\inc\simple\dispatch_ptr.h" />
-    <ClInclude Include="..\inc\simple\dll.h" />
-    <ClInclude Include="..\inc\simple\dynamic.h" />
-    <ClInclude Include="..\inc\simple\exec.h" />
-    <ClInclude Include="..\inc\simple\fiber.h" />
-    <ClInclude Include="..\inc\simple\fs.h" />
-    <ClInclude Include="..\inc\simple\ie.h" />
-    <ClInclude Include="..\inc\simple\ie_download.h" />
-    <ClInclude Include="..\inc\simple\ie_protocol.h" />
-    <ClInclude Include="..\inc\simple\msg_handler.h" />
-    <ClInclude Include="..\inc\simple\msg_thread.h" />
-    <ClInclude Include="..\inc\simple\namedpipe.h" />
-    <ClInclude Include="..\inc\simple\patcher.h" />
-    <ClInclude Include="..\inc\simple\res.h" />
-    <ClInclude Include="..\inc\simple\se.h" />
-    <ClInclude Include="..\inc\simple\wdf.h" />
-    <ClInclude Include="..\inc\simple\wdf_fs.h" />
-    <ClInclude Include="..\inc\simple\wdf_protocol.h" />
+    <ClInclude Include="..\inc\simple-win32\anti.h" />
+    <ClInclude Include="..\inc\simple-win32\dispatch_impl.h" />
+    <ClInclude Include="..\inc\simple-win32\dispatch_ptr.h" />
+    <ClInclude Include="..\inc\simple-win32\dll.h" />
+    <ClInclude Include="..\inc\simple-win32\dynamic.h" />
+    <ClInclude Include="..\inc\simple-win32\exec.h" />
+    <ClInclude Include="..\inc\simple-win32\fiber.h" />
+    <ClInclude Include="..\inc\simple-win32\fs.h" />
+    <ClInclude Include="..\inc\simple-win32\ie.h" />
+    <ClInclude Include="..\inc\simple-win32\ie_download.h" />
+    <ClInclude Include="..\inc\simple-win32\ie_protocol.h" />
+    <ClInclude Include="..\inc\simple-win32\msg_handler.h" />
+    <ClInclude Include="..\inc\simple-win32\msg_thread.h" />
+    <ClInclude Include="..\inc\simple-win32\namedpipe.h" />
+    <ClInclude Include="..\inc\simple-win32\patcher.h" />
+    <ClInclude Include="..\inc\simple-win32\res.h" />
+    <ClInclude Include="..\inc\simple-win32\se.h" />
+    <ClInclude Include="..\inc\simple-win32\wdf.h" />
+    <ClInclude Include="..\inc\simple-win32\wdf_fs.h" />
+    <ClInclude Include="..\inc\simple-win32\wdf_protocol.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\inc\simple\detect_mem_leak.inc" />
+    <None Include="..\inc\simple-win32\detect_mem_leak.inc" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{4134EC0F-BC22-481B-9AD1-27265FC542FC}</ProjectGuid>
