--- a/vs2010/vs2010.vcxproj.filters
+++ b/vs2010/vs2010.vcxproj.filters
@@ -105,6 +105,9 @@
     <ClCompile Include="..\inc\simple-win32\drawhtml.cpp">
       <Filter>simple-cpp-win32</Filter>
     </ClCompile>
+    <ClCompile Include="..\inc\simple-win32\flash.cpp">
+      <Filter>simple-cpp-win32</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="simple-cpp-win32">
@@ -194,6 +197,9 @@
       <Filter>simple-cpp</Filter>
     </ClInclude>
     <ClInclude Include="..\inc\simple-win32\drawhtml.h">
+      <Filter>simple-cpp-win32</Filter>
+    </ClInclude>
+    <ClInclude Include="..\inc\simple-win32\flash.h">
       <Filter>simple-cpp-win32</Filter>
     </ClInclude>
   </ItemGroup>
